# Nexhabit-backend

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: config.py  database.py  main.py  models.py  schemas.py
src/routers/: auth.py  dependencies.py  habits.py
